sass/components/media_entity_browser.view.scss
/**
 * @media-entity media_entity_browser.view.css
 */

@import "variables";

.view-media-entity-browser {
  margin-bottom: 10px;

  .view-filters .form--inline {
    display: flex;

    .form-item-status {
      min-width: 100px;
    }
    .form-item-name {
      flex-grow: 1;
      #edit-name {
        width: 100%;
      }
    }
    #edit-actions {
      padding-top: 16px;
    }
  }

  .views-row {
    /* Show filename */
    &:hover .views-field-name {
      display: block;
    }

    .views-field-name {
      display: none;
    }
    /* Checker */
    &:after {
      content: " ";
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      position: absolute;
      background: transparent url("/core/misc/icons/73b355/check.svg") no-repeat center center;
      background-size: 0;
      -webkit-transition: all 0.2s;
      transition: all 0.2s;
    }

    &.checked:after {
      background-size: 80px 80px;
    }

    &.checked img {
      border: 2px solid #37802f;
    }

    img::selection {
      background: transparent;
    }

    .views-field-entity-browser-select {
      position: absolute !important;
      height: 1px;
      width: 1px;
      overflow: hidden;
      clip: rect(1px, 1px, 1px, 1px);
    }

  }
}

.view-media-entity-browser .view-content,
.entity-browser-form .entities-list {
  margin-left: -0.5%;
  margin-right: 0;

  @media screen and (min-width: 37.5em) {
    margin-right: -1.5%;
  }
  @media screen and (min-width: 50em) {
    margin-right: -0.9%;
  }
}


.view-media-entity-browser:after,
.entity-browser-form .entities-list:after {
  content: "";
  display: table;
  clear: both;
}

.entity-browser-form .entities-list .item-container,
.view-media-entity-browser .views-row {
  position: relative;
  width: 99.5%;
  display: block;
  text-align: center;
  margin: 0.5%;
  float: left;
}

.entity-browser-form .entities-list .item-container {
  width: 151px;
}

.view-media-entity-browser .views-row img,
.entity-browser-form .entities-list article.view-mode-thumbnail img {
  border: 2px solid $gray-lightest;
  width: 100%;
  height: auto;
  box-sizing: border-box;
}

.entity-browser-form .entities-list {
  margin-bottom: 10px;
  clear: left;
  padding-top: 10px;
  border-top: 2px solid #b8b8b8;
}

.entity-browser-form .entities-list .item-container,
.view-media-entity-browser .views-row {
  @media screen and (min-width:37.5em) { /* 600px */
    width: 32%;
  }

  @media screen and (min-width:50em) { /* 800px */
    width: 15.6%;
  }
}

/* Media info */
.media-info {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  width: 100%;
  bottom: 0;
  background-color: rgba(0,0,0,.8);
  padding: 5px 10px;
  color: white;
  text-align: left;

  span {
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
    display: inline-block;
    vertical-align: middle;
    height: 18px;
    width: 18px;
    background-size: 16px 16px;
    margin-right: 4px;
  }
}

.media-info--Video {
  background: transparent url("../images/video.svg") no-repeat;
}

.media-info--Image {
  background: transparent url("../images/image.svg") no-repeat;
}

.media-info--Twitter {
  background: transparent url("../images/twitter.svg") no-repeat;
}

